--- a/styles/style.css
+++ b/styles/style.css
@@ -423,6 +423,7 @@ li > h3 {
 
 nav {
   background-color: #FFFEFC;
+  border-top: 2px solid #9B3030;
   position: fixed;
   top: 0;
   width: 100%;
@@ -499,7 +500,6 @@ textarea {
  .top {
    padding-top: 36px;
  }
-
 
 /* unordered list style */
 ul {
@@ -677,7 +677,38 @@ ul p {
     width: 50%;
   }
 
+  /* HOMEPAGE */
+  .hello {
+    padding-top: 0;
+  }
+
+  .homepage-intro {
+    display: inline-block;
+    width: 60%;
+  }
+
+  .intro-with-pic {
+    display: flex;
+    padding-top: 200px;
+    padding-bottom: 72px;
+    width: 100%;
+  }
+
+  .line-height {
+    line-height: 2em;
+  }
+
+  .profile-pic {
+    display: inline-block;
+    padding-left: 60px;
+    width: 20%;
+  }
+
+  .prof-pic {
+    max-width: 250px;
+  }
 }
+
 @media screen and (min-width: 991px) {
   /* DESKTOP MARGINS (NOT AFFECTING BACKGROUND) */
   .button {
