--- a/styles/style.css
+++ b/styles/style.css
@@ -165,6 +165,10 @@ a {
   text-decoration: none;
 }
 
+.break {
+  border-bottom: 4px solid #393939;
+  width: 100px;
+}
 /* button style */
 .button {
   background-color: #393939;
@@ -370,6 +374,10 @@ hr {
   text-align: left;
 }
 
+.italic {
+  font-style: italic;
+  line-height: 38px;
+}
 /* text field contact page */
 input {
   height: 30px;
@@ -657,6 +665,10 @@ ul p {
     width: 33%;
   }
 
+  .tools {
+        border-right: none;
+  }
+
   .how {
     padding-top: 0;
   }
@@ -675,6 +687,10 @@ ul p {
   .chart, .graph {
     display: inline-block;
     width: 50%;
+  }
+
+  .laura, .jess, .alex {
+    width: 33%;
   }
 
   /* HOMEPAGE */
@@ -765,7 +781,13 @@ ul p {
     font-size: 6em;
   }
 
-  h2, h3, h4, h5 {
+  h2 {
+    font-size: 2.8em;
+    padding-bottom: 72px;
+    padding-top: 72px;
+  }
+
+  h3, h4, h5 {
     font-size: 3em;
     padding-bottom: 72px;
     padding-top: 72px;
@@ -1058,7 +1080,7 @@ ul p {
 
   .profile-pic {
     display: inline-block;
-    padding-left: 150px;
+    padding-left: 100px;
     width: 20%;
   }
 
@@ -1081,6 +1103,11 @@ ul p {
     display: block;
     height: 600px;
     width: 80%;
+  }
+
+  .text-margin {
+    margin-left: 100px;
+    margin-right: 100px;
   }
 
   /* CONTACT PAGE */
@@ -1109,5 +1136,55 @@ ul p {
     height: 50px;
     width: 500px;
   }
+}
 
+@media screen and (min-width: 1200px) {
+  /* MAIN CONTAINER */
+  .main-container {
+    max-width:
+  }
+
+  /* ABOUT PAGE */
+  .salvador {
+    display: block;
+    height: 800px;
+    width: 80%;
+  }
+  .text-margin {
+    margin-left: 200px;
+    margin-right: 200px;
+  }
+}
+
+@media screen and (min-width: 2200px) {
+  /* MAIN CONTAINER */
+  .main-container {
+    max-width: 1850px;
+  }
+
+  /*HOMEPAGE */
+  .desktop-proto {
+    max-width: 1000px;
+  }
+
+  .line-height {
+    line-height: 2em;
+  }
+
+  .profile-pic {
+    display: inline-block;
+    padding-left: 200px;
+    width: 20%;
+  }
+
+  .prof-pic {
+    max-width: 450px;
+  }
+
+  /* ABOUT PAGE */
+  .salvador {
+    display: block;
+    height: 900px;
+    width: 80%;
+  }
 }
