--- a/styles/style.css
+++ b/styles/style.css
@@ -1158,8 +1158,12 @@ ul p {
 
 @media screen and (min-width: 2200px) {
   /* MAIN CONTAINER */
+  .body {
+  max-width:1850px;
+  }
   .main-container {
     max-width: 1850px;
+    align-content: center;
   }
 
   /*HOMEPAGE */
