--- a/styles/style.css
+++ b/styles/style.css
@@ -1140,10 +1140,37 @@ ul p {
 
 @media screen and (min-width: 1200px) {
   /* MAIN CONTAINER */
-  .main-container {
-    max-width:
+  body {
+    max-width:1400px;
+    margin: 0 auto;
   }
 
+  nav {
+    max-width:1400px;
+    max-height: 126px;
+  }
+
+  .work-about-resume {
+    max-width: 113px;
+    max-height: 49px;
+    position: fixed;
+  }
+
+  .font {
+    max-width: 560px;
+  }
+
+  .desktop-proto {
+    max-width: 700px;
+  }
+
+  .project-name {
+    max-width: 420px;
+  }
+
+  .tools {
+        border-right: none;
+  }
   /* ABOUT PAGE */
   .salvador {
     display: block;
@@ -1153,42 +1180,5 @@ ul p {
   .text-margin {
     margin-left: 200px;
     margin-right: 200px;
-  }
-}
-
-@media screen and (min-width: 2200px) {
-  /* MAIN CONTAINER */
-  .body {
-  max-width:1850px;
-  }
-  .main-container {
-    max-width: 1850px;
-    align-content: center;
-  }
-
-  /*HOMEPAGE */
-  .desktop-proto {
-    max-width: 1000px;
-  }
-
-  .line-height {
-    line-height: 2em;
-  }
-
-  .profile-pic {
-    display: inline-block;
-    padding-left: 200px;
-    width: 20%;
-  }
-
-  .prof-pic {
-    max-width: 450px;
-  }
-
-  /* ABOUT PAGE */
-  .salvador {
-    display: block;
-    height: 900px;
-    width: 80%;
   }
 }
